# MindWeaver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
mindweaver/: CMakeLists.txt  binding.cpp  main.cpp
mindweaver/include/: Application.h
mindweaver/include/core/: Graph.h  Link.h  Node.h  Pin.h  Position.h  UUID.h
mindweaver/include/ui/: NodeEditorPanel.h  Widget.h  Window.h
mindweaver/src/: Application.cpp
mindweaver/src/ui/: NodeEditorPanel.cpp
